tests/type_check/control_flow/goto_label_defined_in_another_function_is_undefined.err.expected
error: at 4:13: [TC-TerminatorUndefinedTarget] In function 'f', block 'entry': goto targets undefined block 'other'
   |
 4 |             goto other
   |             ^^^^^^^^^^
