tests/type_check/control_flow/goto_label_defined_in_another_function_is_undefined.sim

        fn f() {
            entry:
            goto other
        }
        fn g() {
            other:
            return
        }
        